--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "repository": "github:Lambda-School-Labs/labs-spa-starter",
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@aws-amplify/ui-react": "^0.2.19",
     "@craco/craco": "^5.6.4",
     "@okta/okta-react": "^3.0.2",
